--- a/views/index.html
+++ b/views/index.html
@@ -60,10 +60,10 @@
 
 
 
-    <script type="text/javascript" src="/static/js/jquery.js"></script>
-    <script type="text/javascript" src="/static/js/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="/static/js/bootstrap.js"></script>
-    <script type="text/javascript" src="/static/js/bootstrap-dialog.js"></script>
+    <script type="text/javascript" src="/static/js/vendor/jquery.js"></script>
+    <script type="text/javascript" src="/static/js/vendor/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="/static/js/vendor/bootstrap.js"></script>
+    <script type="text/javascript" src="/static/js/vendor/bootstrap-dialog.js"></script>
 
     <script type="text/javascript">
       $(document).ready(function() {
