--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,11 +4,7 @@
    Author's custom styles
    ========================================================================== */
 
-
-
-
-
-
+html,body{font-size: 12px;}
 
 
 
