--- a/views/index.html
+++ b/views/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
-
-<html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   	<head>
       <title>blog</title>
     	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="description" content="个人博客,记录人生,在未来的路上不断进步,超越自己">
 		  <meta name="keywords" content="博客 交流 IT 进步 简单">
       <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
       <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-theme.css">
-      <link rel="stylesheet" type="text/css" href="/static/css/base.css">
-      <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-      <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+      <link rel="stylesheet" type="text/css" href="/static/css/main.css">
       <!--[if lt IE 9]>
-          <script src="http://cdn.bootcss.com/html5shiv/3.7.0/html5shiv.min.js"></script>
-          <script src="http://cdn.bootcss.com/respond.js/1.3.0/respond.min.js"></script>
-      <![endif]-->
+            <script src="/static/js/vendor/html5-3.6-respond-1.1.0.min.js"></script>
+        <![endif]-->
 	</head>
   	
   <body>
+    <!--[if lt IE 7]>
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
