--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">首页</a>
+          <a class="navbar-brand" href="#">首页{{i18n .Lang "home"}}{{.Lang}}</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
