--- a/views/default.html
+++ b/views/default.html
@@ -1,11 +1,10 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>无标题</title>
 </head>
 <body>
-{{.Lang}}
-
-{{.i18n .Lang "home"}}
+	fd
+	sfds
 </body>
 </html>
