--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
     	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     	<meta name="description" content="个人博客,记录人生,在未来的路上不断进步,超越自己">
 		  <meta name="keywords" content="博客 交流 IT 进步 简单">
       <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
@@ -31,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">首页{{i18n .Lang "home"}}{{.Lang}}</a>
+          <a class="navbar-brand" href="#">{{i18n .Lang "home"}}</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
