--- a/views/base/base.html
+++ b/views/base/base.html
@@ -12,8 +12,13 @@
 	        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	    <![endif]-->
 		<noscript>{{i18n .Lang "enable_js_prompt"}}</noscript>
-		{{template "base/navbar.html" .}}
-		{{template "body" .}}
+		<div id="wrapper">
+			{{template "base/navbar.html" .}}
+			<div id="main">
+				{{template "body" .}}
+		    </div>
+		    <div class="wrapper-push"></div>
+		</div>
 		{{template "base/footer.html" .}}
 	</body>
 </html>
