--- a/views/home.html
+++ b/views/home.html
@@ -2,6 +2,7 @@
 {{define "meta"}}
 <meta name="description" content="个人博客,记录人生,在未来的路上不断进步,超越自己">
 <meta name="keywords" content="博客 交流 IT 进步 简单">
+<title>个人博客</title>
 {{end}}
 {{define "head"}}{{end}}
 {{define "body"}}
