--- a/views/base/navbar.html
+++ b/views/base/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -50,10 +50,10 @@
                     <a href="../navbar/">个人中心</a>
                 </li>
                 <li>
-                    <a href="javascript:void(0);" data-toggle="modal" data-target="#myModal">登录</a>
+                    <a href="javascript:void(0);" id="loginHandler">登录</a>
                 </li>
                 <li>
-                    <a href="javascript:void(0);" id="reg">注册</a>
+                    <a href="javascript:void(0);" id="regHandler">注册</a>
                 </li>
             </ul>
         </div>
