validate form plugin add

--- a/views/base/base.html
+++ b/views/base/base.html
@@ -17,5 +17,6 @@
 		    <div class="wrapper-push"></div>
 		</div>
 		{{template "base/footer.html" .}}
+		{{template "script" .}}
 	</body>
 </html>
