--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
 	 <div class="container">
         <div class="row">
             <div class="col-md-12">
-                Beego Framework
+                Beego Framework {{.Website}}
 	        </div>
         </div>
     </div>
