--- a/static_source/css/base.css
+++ b/static_source/css/base.css
@@ -307,6 +307,11 @@ a.color-link:hover,
   background-color: #ddd;
 }
 
+.nav-focus{
+  color: white;
+  background-color: transparent;
+}
+
 /* dropdown login */
 #dropdown-login {
   width: 280px;
