--- a/views/contact.html
+++ b/views/contact.html
@@ -9,7 +9,7 @@
 	 <div class="container">
         <div class="row">
             <div class="col-md-12">
-                个人博客
+                lianxiwo
 	        </div>
         </div>
     </div>
