--- a/views/blog_add.html
+++ b/views/blog_add.html
@@ -10,19 +10,38 @@
 {{define "body"}}
 	 <div class="container">
         <div class="row">
-            <div class="col-md-12" id="blog_add_area">
+            <div class="col-md-9 col-md-offset-1 mt20" id="blog_add_area">
                 {{if .hasOL}}
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label for="title" class="col-sm-2 control-label">标题:</label>
+                            <div class="col-sm-10">
+                              <input type="text" class="form-control" id="title" style="width:99%;" placeholder="title">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="title" class="col-sm-2 control-label">分类:</label>
+                            <div class="col-sm-10">
+                              <input type="text" class="form-control" id="title" style="width:99%;" placeholder="title">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="container" class="col-sm-2 control-label">内容:</label>
+                            <div class="col-sm-10">
+                                <!-- 加载编辑器的容器 -->
+                                <div id="container" name="content" style="height:300px;">
+                                    这里写你的初始化内容123
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </form>
                 {{else}}
                     <p id="noLogin" class="mt20">
                         您还没有登录,登录后发表博客!
                         <a href="javascript:;" id="blog_add_login">快速登录</a>&nbsp;|&nbsp;<a href="javascript:;" id="blog_add_reg">注册</a>
                     </p>
                 {{end}}
-                <!-- 加载编辑器的容器 -->
-                <div id="container" name="content" style="height:300px;">
-                    这里写你的初始化内容123
-                </div>
-                
 	        </div>
         </div>
     </div>
