--- a/views/base/navbar.html
+++ b/views/base/navbar.html
@@ -1,5 +1,5 @@
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation" id="navBar">
+    <div class="container" id="topNav">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -49,7 +49,7 @@
                     </ul>
                 </li>
             </ul>
-            {{if .hasOL}}
+            {{if .HasOL}}
             <ul class="nav navbar-nav navbar-right" id="nav-in">
                 <li style="width:200px;padding:8px 0 0;">
                     <div class="input-group">
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                     <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
-                        <img class="pull-left navhead" src="/static/img/head.jpg"> <em id="nav-email">{{.onlineUser}}</em>
+                        <img class="pull-left navhead" src="/static/img/head.jpg"> <em id="nav-email">{{.OnlineUser}}</em>
                         &nbsp;
                         <span class="badge">42</span>
                     </a>
