--- a/views/blog_add.html
+++ b/views/blog_add.html
@@ -6,42 +6,50 @@
 {{end}}
 {{define "head"}}
 <link rel="stylesheet" type="text/css" href="/static/umeditor/themes/default/css/umeditor.css">
+<link rel="stylesheet" type="text/css" href="/static/select2/select2.css">
 {{end}}
 {{define "body"}}
 	 <div class="container">
         <div class="row">
             <div class="col-md-9 col-md-offset-1 mt20" id="blog_add_area">
-                {{if .hasOL}}
-                    <form class="form-horizontal">
+                    <p id="noLogin" class="col-md-offset-2 hide">
+                        {{i18n .Lang "not_login"}}
+                        <a href="javascript:;" id="blog_add_login">{{i18n .Lang "quick_login"}}</a>&nbsp;|&nbsp;<a href="javascript:;" id="blog_add_reg">{{i18n .Lang "Register"}}</a>
+                    </p>
+                    <form id="postForm" class="form-horizontal">
                         <div class="form-group">
-                            <label for="title" class="col-sm-2 control-label">标题:</label>
+                            <label for="title" class="col-sm-2 control-label">{{i18n .Lang "blog.title"}}:</label>
                             <div class="col-sm-10">
                               <input type="text" class="form-control" id="title" style="width:99%;" placeholder="title">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="title" class="col-sm-2 control-label">分类:</label>
-                            <div class="col-sm-10">
-                              <input type="text" class="form-control" id="title" style="width:99%;" placeholder="title">
+                            <label for="category" class="col-sm-2 control-label">{{i18n .Lang "blog.category"}}:</label>
+                            <div class="col-sm-2">
+                                <select name="category" id="category" style="width:100%;">
+                                    <option value="Java">Java</option>
+                                    <option value="Go">Go</option>
+                                    <option value="Javascript">Javascript</option>
+                                </select>
+                            </div>
+                            <label for="category" class="col-sm-1 control-label">{{i18n .Lang "blog.tag"}}:</label>
+                            <div class="col-sm-7">
+                                <div id="tag" style="width:99%;"></div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="container" class="col-sm-2 control-label">内容:</label>
+                            <label for="container" class="col-sm-2 control-label">{{i18n .Lang "blog.content"}}:</label>
                             <div class="col-sm-10">
                                 <!-- 加载编辑器的容器 -->
-                                <div id="container" name="content" style="height:300px;">
-                                    这里写你的初始化内容123
-                                </div>
+                                <div id="container" name="content" style="height:300px;"></div>
                             </div>
                         </div>
-                        
+                        <div class="form-group">
+                          <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
+                          </div>
+                        </div>
                     </form>
-                {{else}}
-                    <p id="noLogin" class="mt20">
-                        您还没有登录,登录后发表博客!
-                        <a href="javascript:;" id="blog_add_login">快速登录</a>&nbsp;|&nbsp;<a href="javascript:;" id="blog_add_reg">注册</a>
-                    </p>
-                {{end}}
 	        </div>
         </div>
     </div>
@@ -49,11 +57,14 @@
 {{define "script"}}
     <script type="text/javascript" src="/static/umeditor/umeditor.config.js"></script>
     <script type="text/javascript" src="/static/umeditor/umeditor.js"></script>
+    <script type="text/javascript" src="/static/select2/select2.min.js"></script>
     {{if eq .Lang "zh-CN"}}
         <script type="text/javascript" src="/static/umeditor/lang/zh-cn/zh-cn.js"></script>
+        <script type="text/javascript" src="/static/select2/select2_locale_zh-CN.js"></script>
     {{end}}
     {{if eq .Lang "en-US"}}
         <script type="text/javascript" src="/static/umeditor/lang/en/en.js"></script>
     {{end}}
+    <script type="text/javascript">var hasOl = {{.HasOL}};</script>
     {{compress_js "blogadd"}}
 {{end}}
