--- a/views/blog_add.html
+++ b/views/blog_add.html
@@ -20,7 +20,7 @@
                         <div class="form-group">
                             <label for="title" class="col-sm-2 control-label">{{i18n .Lang "blog.title"}}:</label>
                             <div class="col-sm-10">
-                              <input type="text" class="form-control" id="title" style="width:99%;" placeholder="title">
+                              <input type="text" class="form-control" name="title" id="title" style="width:99%;" placeholder="title">
                             </div>
                         </div>
                         <div class="form-group">
@@ -46,7 +46,7 @@
                         </div>
                         <div class="form-group">
                           <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
+                            <button type="button" class="btn btn-primary" id="submitBtn">{{i18n .Lang "blog.submit"}}</button>
                           </div>
                         </div>
                     </form>
