--- a/views/blog_add.html
+++ b/views/blog_add.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-md-9 col-md-offset-1 mt20" id="blog_add_area">
                     <p id="noLogin" class="col-md-offset-2 hide">
-                        {{i18n .Lang "not_login"}}
+                        {{i18n .Lang "notLogin"}}
                         <a href="javascript:;" id="blog_add_login">{{i18n .Lang "quick_login"}}</a>&nbsp;|&nbsp;<a href="javascript:;" id="blog_add_reg">{{i18n .Lang "Register"}}</a>
                     </p>
                     <form id="postForm" class="form-horizontal">
@@ -27,9 +27,9 @@
                             <label for="category" class="col-sm-2 control-label">{{i18n .Lang "blog.category"}}:</label>
                             <div class="col-sm-2">
                                 <select name="category" id="category" style="width:100%;">
-                                    <option value="Java">Java</option>
-                                    <option value="Go">Go</option>
-                                    <option value="Javascript">Javascript</option>
+                                    <option value="1">Java</option>
+                                    <option value="2">Go</option>
+                                    <option value="3">Javascript</option>
                                 </select>
                             </div>
                             <label for="category" class="col-sm-1 control-label">{{i18n .Lang "blog.tag"}}:</label>
