--- a/views/blog_add.html
+++ b/views/blog_add.html
@@ -44,6 +44,17 @@
                                 <div id="container" name="content" style="height:300px;"></div>
                             </div>
                         </div>
+                        
+                        <div class="form-group">
+                            <div class="col-sm-10 col-sm-offset-2">
+                                <!-- 加载编辑器的容器 -->
+                                <div class="checkbox">
+                                    <label>
+                                      <input name="canComment" type="checkbox" value="0" id="canComment" checked>{{i18n .Lang "blog.can_comment"}}
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
                         <div class="form-group">
                           <div class="col-sm-offset-2 col-sm-10">
                             <button type="button" class="btn btn-primary" id="submitBtn">{{i18n .Lang "blog.submit"}}</button>
